--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import SkillLayout from '../components/SkillLayout.astro'
 import PostPreview from '@/components/blog/PostPreview.astro'
 
 import { Image } from 'astro:assets'
-import astro from '../assets/about-astro.png'
+import astro from '../assets/blog-profile.png'
 
 import { getAllPosts, sortMDByDate } from '@/utils'
 
@@ -29,20 +29,23 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 			<div class='flex flex-col items-center gap-y-4'>
 				<h1 class='text-3xl font-bold'>coco.L</h1>
 				<div class='flex flex-wrap justify-center gap-x-7 gap-y-3'>
-					<Label title='Republick of Korea, Seoul'>
-						<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' class='h-5 w-5' slot='icon'
-							><path
-								fill='currentColor'
-								d='M12.003 11.73q.668 0 1.14-.475q.472-.475.472-1.143t-.475-1.14q-.476-.472-1.143-.472t-1.14.476q-.472.475-.472 1.143t.475 1.14q.476.472 1.143.472M12 19.677q2.82-2.454 4.458-4.991q1.638-2.538 1.638-4.39q0-2.744-1.737-4.53T12 3.981q-2.621 0-4.359 1.785t-1.737 4.53q0 1.852 1.638 4.39q1.639 2.537 4.458 4.99m0 1.343q-3.525-3.117-5.31-5.814q-1.786-2.697-1.786-4.909q0-3.173 2.066-5.234Q9.037 3 12 3t5.03 2.062q2.066 2.061 2.066 5.234q0 2.212-1.785 4.909q-1.786 2.697-5.311 5.814m0-10.904'
-							></path></svg
+					<Label title='coco8j.lee@gmail.com'>
+						<svg
+							xmlns='http://www.w3.org/2000/svg'
+							fill='currentColor'
+							class='bi bi-mailbox2-flag h-5 w-5'
+							viewBox='0 0 16 16'
+							slot='icon'
 						>
+							<path
+								d='M10.5 8.5V3.707l.854-.853A.5.5 0 0 0 11.5 2.5v-2A.5.5 0 0 0 11 0H9.5a.5.5 0 0 0-.5.5v8z'
+							></path>
+							<path
+								d='M4 3h4v1H6.646A4 4 0 0 1 8 7v6h7V7a3 3 0 0 0-3-3V3a4 4 0 0 1 4 4v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V7a4 4 0 0 1 4-4m.585 4.157C4.836 7.264 5 7.334 5 7a1 1 0 0 0-2 0c0 .334.164.264.415.157C3.58 7.087 3.782 7 4 7s.42.086.585.157'
+							></path>
+						</svg>
 					</Label>
-					<Label
-						title='Github'
-						as='a'
-						href='https://github.com/coco8j'
-						target='_blank'
-					>
+					<Label title='Github' as='a' href='https://github.com/coco8j' target='_blank'>
 						<svg
 							xmlns='http://www.w3.org/2000/svg'
 							viewBox='0 0 16 16'
@@ -60,10 +63,9 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 
 		<Section title='About'>
 			<p class='text-muted-foreground'>
-				안녕하세요, 문제 해결과 논리적 사고를 즐기는 개발자입니다.
-				핵심을 파악하여 차근차근 문제를 해결하는 과정을 즐기고 있습니다.
-				“아는 것은 힘이다”라는 말처럼, 문제 해결의 도구를 늘려가는 데 이보다 좋은 방법은 없는 것 같습니다.
-				소소한 지식 공방에 오신것을 환영합니다. 🪴
+				안녕하세요, 문제 해결과 논리적 사고를 즐기는 개발자입니다. 핵심을 파악하여 차근차근 문제를
+				해결하는 과정을 즐기고 있습니다. “아는 것은 힘이다”라는 말처럼, 문제 해결의 도구를 늘려가는
+				데 이보다 좋은 방법은 없는 것 같습니다. 소소한 지식 공방에 오신것을 환영합니다. 🪴
 			</p>
 		</Section>
 		{
