--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,36 +81,34 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS)
 				</Section>
 			)
 		}
-
-		<Section title='Education'>
-			<Card
-				heading='Vanila Coding'
-				subheading='바닐라코딩 풀스택 부트캠프'
-				date='Apr 2024 - Oct 2024'
-				altText='Lorem, ipsum dolor sit'
-				imageClass='h-12 w-auto md:-left-16'
-			/>
-		</Section>
-
 		<Section title='Projects'>
 			<div class='flex flex-col gap-y-3 sm:flex-row sm:gap-x-3 sm:gap-y-0'>
 				<ProjectCard
 					href='https://github.com/coco8j/TunaKeyboard-Andorid-App'
 					heading='Tuna Keyboard'
-					subheading='⌨️ 입력패턴을 학습해 맞춤형 키보드 레이아웃을 제공하는 안드로이드 앱입니다.'
-					imagePath='/src/assets/coming-soon.png'
+					subheading='⌨️ 입력패턴을 학습해 맞춤형 키보드 레이아웃을 제공하는 안드로이드 앱입니다. #Android #Kotilin'
+					imagePath='/src/assets/tuna-keyboard.png'
 					altText='Project1 sample img'
-					class='w-full sm:w-1/2'
+					class='w-1/2 object-contain sm:w-1/2'
 				/>
 				<ProjectCard
 					href='https://github.com/DeliOrder/DeliOrder-Client'
 					heading='Deli Order'
-					subheading='💼 파일 작업 자동화 매크로를 만들고 쉽게 공유하여 실행할 수 있는 데스크탑 애플리케이션 입니다.'
+					subheading='💼 파일 작업 자동화 매크로를 만들고 쉽게 공유하여 실행할 수 있는 데스크탑 애플리케이션 입니다. #React #Node.js #Electrone'
 					imagePath='/src/assets/coming-soon.png'
 					altText='Project2 sample img'
-					class='w-full sm:w-1/2'
+					class='w-1/2 object-contain sm:w-1/2'
 				/>
 			</div>
+		</Section>
+		<Section title='Education'>
+			<Card
+				heading='Vanila Coding'
+				subheading='바닐라코딩 풀스택 부트캠프'
+				date='Apr 2024 - Oct 2024'
+				altText='education bootcamp'
+				imageClass='h-12 w-auto md:-left-16'
+			/>
 		</Section>
 	</div>
 </PageLayout>
