--- a/src/components/blog/Hero.astro
+++ b/src/components/blog/Hero.astro
@@ -44,7 +44,7 @@ const dateTimeOptions: Intl.DateTimeFormatOptions = {
 
 {
 	!!data.tags?.length && (
-		<div class='mt-3 flex flex-row items-center gap-x-1'>
+		<div class='mt-3 flex flex-wrap items-center gap-x-1'>
 			<svg
 				aria-hidden='true'
 				class='me-1 inline-block h-6 w-6'
