Post: Next.js 에러메시지를 통해 Next.js 랜더 동작 이해하기
Fix: inline script 인식 추가

Edit: 제목 양식에 맞게 수정

Edit: 제목 양식에 맞게 수정(띄어쓰기)

Chore: title 최대 길이 확장 (up to 130)

Edit: 잘못된 표현 수정

Edit: Next 관련 게시글 편집( 부정확한 표현 교정)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,9 +20,9 @@ const {
 <html lang={siteConfig.lang} class=''>
 	<head>
 		<!-- Google tag (gtag.js) -->
-		<script async src='https://www.googletagmanager.com/gtag/js?id=G-NFXHZF87DC'></script>
-		<script>
-			//@ts-ignore
+		<script is:inline async src='https://www.googletagmanager.com/gtag/js?id=G-NFXHZF87DC'></script>
+		<script is:inline>
+			// @ts-ignore
 			window.dataLayer = window.dataLayer || []
 			function gtag() {
 				dataLayer.push(arguments)
@@ -100,7 +100,7 @@ const {
 				}
 			})(document, window.mixpanel || [])
 		</script>
-		<script>
+		<script is:inline>
 			// Near entry of your product, init Mixpanel
 			mixpanel.init('db5b29f65f196a79c32c2955f01e08f5', {
 				debug: true,
@@ -108,7 +108,6 @@ const {
 				persistence: 'localStorage'
 			})
 		</script>
-
 		<BaseHead articleDate={articleDate} description={description} ogImage={ogImage} title={title} />
 	</head>
 
