--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -18,8 +18,7 @@
 
 @font-face {
 	font-family: 'Pretendard-Regular';
-	src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
-		format('woff');
+	src: url('/fonts/PretendardVariable.woff2') format('woff2');
 	font-weight: 400;
 	font-style: normal;
 }
